--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href='/map_maker/' target='_blank'>grid map editor</a>
+<a href='/Tabletop_games_tools/map_maker/' target='_blank'>grid map editor</a>
