--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <a href='/Tabletop_games_tools/map_maker/' target='_blank'>grid map editor</a>
+<a href='/Tabletop_games_tools/pixel_art_converter/' target='_blank'>grid map editor</a>
+<a href='/Tabletop_games_tools/standee_maker/' target='_blank'>grid map editor</a>
+<a href='/Tabletop_games_tools/swiss/' target='_blank'>grid map editor</a>
