--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href='/Tabletop_games_tools/map_maker/' target='_blank'>grid map editor</a>
-<a href='/Tabletop_games_tools/pixel_art_converter/' target='_blank'>grid map editor</a>
-<a href='/Tabletop_games_tools/standee_maker/' target='_blank'>grid map editor</a>
-<a href='/Tabletop_games_tools/swiss/' target='_blank'>grid map editor</a>
+<div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>grid map editor</a></div>
+<div><a href='/Tabletop_games_tools/pixel_art_converter/' target='_blank'>pixel art converter</a></div>
+<div><a href='/Tabletop_games_tools/standee_maker/' target='_blank'>standee maker</a></div>
+<div><a href='/Tabletop_games_tools/swiss/' target='_blank'>swiss match maker</a></div>
