--- a/swiss/index.html
+++ b/swiss/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>瑞士制賽會管理系統 (進階版)</title>
+    <title>瑞士制賽會管理系統</title>
     <style>
         :root { --primary: #2563eb; --bg: #f8fafc; --card: #ffffff; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background: var(--bg); max-width: 800px; margin: 0 auto; padding: 20px; color: #333; }
