--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@
 <div><a href='/Tabletop_games_tools/standee_maker/' target='_blank'>standee maker</a></div>
 <div><a href='/Tabletop_games_tools/counter_sheet_maker/' target='_blank'>counter sheet_maker maker</a></div>
 <div><a href='/Tabletop_games_tools/swiss/' target='_blank'>swiss match maker</a></div>
+
+<div><a href='/Tabletop_games_tools/Simple_VTT/' target='_blank'>Simple VTT for grid wargame developers</a></div>
+<div><a href='/Tabletop_games_tools/counter_editor/' target='_blank'>Counters for Simple VTT</a></div>
+<div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>Grid map editor for Simple VTT, also supports PNG output</a></div>
