--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@
 <div><a href='/Tabletop_games_tools/Simple_VTT/' target='_blank'>Simple VTT for grid wargame developers</a></div>
 <div><a href='/Tabletop_games_tools/counter_editor/' target='_blank'>Counters for Simple VTT</a></div>
 <div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>Grid map editor for Simple VTT, also supports PNG output</a></div>
+
+<div><a href='/Tabletop_games_tools/Opposed_Roll/' target='_blank'>DBL's Opposed Roller</a></div>
