--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
 <div><a href='/Tabletop_games_tools/counter_editor/' target='_blank'>Counters for Simple VTT</a></div>
 <div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>Grid map editor for Simple VTT, also supports PNG output</a></div>
 
-<div><a href='/Tabletop_games_tools/Opposed_Roll/' target='_blank'>DBL's Opposed Roller</a></div>
+<div><a href='/Tabletop_games_tools/Opposed_Roll/' target='_blank'>DBL拚骰器</a></div>
+<div><a href='/Tabletop_games_tools/Phone_lighter/' target='_blank'>手機用補光燈</a></div>
+
