--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>grid map editor</a></div>
-<div><a href='/Tabletop_games_tools/pixel_art_converter/' target='_blank'>pixel art converter</a></div>
-<div><a href='/Tabletop_games_tools/standee_maker/' target='_blank'>standee maker</a></div>
-<div><a href='/Tabletop_games_tools/counter_sheet_maker/' target='_blank'>counter sheet_maker maker</a></div>
-<div><a href='/Tabletop_games_tools/swiss/' target='_blank'>swiss match maker</a></div>
-<div><a href='/Tabletop_games_tools/avatar_cutter/' target='_blank'>avatar cutter</a></div>
-<div><a href='/Tabletop_games_tools/Simple_VTT/' target='_blank'>Simple VTT for grid wargame developers</a></div>
-<div><a href='/Tabletop_games_tools/Simple_VTT_no_grid/' target='_blank'>Simple VTT for non grid wargame developers</a></div>
-<div><a href='/Tabletop_games_tools/counter_editor/' target='_blank'>Counters for Simple VTT</a></div>
-<div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>Grid map editor for Simple VTT, also supports PNG output</a></div>
+<div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>網格地圖編輯器</a></div>
+<div><a href='/Tabletop_games_tools/pixel_art_converter/' target='_blank'>像素圖轉換器</a></div>
+<div><a href='/Tabletop_games_tools/standee_maker/' target='_blank'>桌遊立牌製作工具</a></div>
+<div><a href='/Tabletop_games_tools/counter_sheet_maker/' target='_blank'>桌遊兵牌製作工具</a></div>
+<div><a href='/Tabletop_games_tools/swiss/' target='_blank'>瑞士制管理工具</a></div>
+<div><a href='/Tabletop_games_tools/avatar_cutter/' target='_blank'>頭像切割工具</a></div>
+<div><a href='/Tabletop_games_tools/Simple_VTT/' target='_blank'>虛擬桌面(網格地圖)</a></div>
+<div><a href='/Tabletop_games_tools/Simple_VTT_no_grid/' target='_blank'>虛擬桌面(無網格地圖)</a></div>
+<div><a href='/Tabletop_games_tools/counter_editor/' target='_blank'>虛擬桌面用兵牌製作工具</a></div>
+<div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>虛擬桌面用地圖製作工具 (含PNG匯出)</a></div>
 
 <div><a href='/Tabletop_games_tools/Opposed_Roll/' target='_blank'>DBL拚骰器</a></div>
 <div><a href='/Tabletop_games_tools/Phone_lighter/' target='_blank'>手機用補光燈</a></div>
