--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <div><a href='/Tabletop_games_tools/counter_editor/' target='_blank'>虛擬桌面用兵牌製作工具</a></div>
 <div><a href='/Tabletop_games_tools/map_maker/' target='_blank'>虛擬桌面用地圖製作工具 (含PNG匯出)</a></div>
 
+<div><a href='/Tabletop_games_tools/sprite_slicer/' target='_blank'>小人切片工具</a></div>
+
 <div><a href='/Tabletop_games_tools/Opposed_Roll/' target='_blank'>DBL拚骰器</a></div>
 <div><a href='/Tabletop_games_tools/Phone_lighter/' target='_blank'>手機用補光燈</a></div>
 
